[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bound-entangled"
version = "0.1.0"
description = "Families of bound entangled states for Quantum Information"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AVlyx", email = "anton@vancleem.com"}
]
dependencies = [
    "toqito>=1.3.0",
    "numpy>=2.4.1"
]

[project.urls]
Homepage = "https://github.com/AVlyx/bound-entangled"

[tool.setuptools.packages.find]
where = ["src"]