[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bound-entangled"
version = "0.1.2"
description = "Families of bound entangled states for Quantum Information"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AVlyx", email = "anton@vancleem.com"}
]
dependencies = [
    "toqito>=1.1.8",
    "numpy>=2.4.1"
]

[project.urls]
Homepage = "https://github.com/AVlyx/bound-entangled"

[project.optional-dependencies]
test = ["pytest"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src: import the library the same way the source does (`from bound_entangled.utils import ...`)
#      even without the editable install. tests: makes the shared `qi` helper
#      module importable from every test file.
pythonpath = ["src", "tests"]
# importlib mode lets the two identically named `test_upb.py` modules coexist.
addopts = "--import-mode=importlib"